Worked on factoring some UI elements, styling the scrollbar and made text responsive

--- a/src/index.css
+++ b/src/index.css
@@ -55,9 +55,13 @@ a, input {
     @apply border-2 border-terminal p-2 rounded-xl w-full text-terminal font-mono font-medium cursor-none caret-terminal active:border-terminal
 }
 
+.input-field-msg {
+    scrollbar-width: thin;
+    scrollbar-color: var(--color-terminal) var(--color-terminal);
+}
 
 .input-field-cont {
-    @apply  flex justify-center items-start flex-col p-2 font-mono w-4/5 
+    @apply  flex justify-center items-start flex-col p-2 font-mono md:w-4/5 w-full
 }
 
 .social-cont {
@@ -86,4 +90,21 @@ body {
     z-index: 99999;
     transform: translate(-50%, -50%);
     transition: width 0.1s, height 0.1s;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--color-terminal);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--color-terminal);
+  cursor: none;
+}
+
+::-webkit-scrollbar-track {
+  background-color: black;
 }
