--- a/src/index.css
+++ b/src/index.css
@@ -32,11 +32,15 @@ a, input {
 }
 
 .about-block {
-    @apply border-2 border-terminal p-3 rounded-xl relative
+    @apply border-2 border-terminal p-3 rounded-xl relative overflow-hidden min-w-40 text-center flex items-center
+}
+
+.about-block .cover {
+    @apply transition ease-in-out duration-300
 }
 
 .about-block:hover .cover {
-    @apply opacity-0
+    @apply -top-72
 }
 
 .double-dashed-border {
@@ -115,4 +119,10 @@ body {
 
 ::-webkit-scrollbar-track {
   background-color: black;
+}
+
+@media print {
+    .cmatrix-render {
+        display: none;
+    }
 }
